manifest/objects/copado__Artifact_Version__c.object
<CustomObject>
    <fields>
        <fullName>cmcSf__Ancestor_Id__c</fullName>
        <inlineHelpText>Ancestor Id is used to specify an existing promoted (published) package version. It is specified as a package version id (04t) or as a package version alias. In Copado, this field reflects the value in your project configuration (sfdx-project.json) and cannot be edited from the UI. Be mindful of what version is used as ancestor as package ancestry impacts which package version upgrades are allowed.</inlineHelpText>
        <label>Ancestor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcSf__Ancestor_Version__c</fullName>
        <inlineHelpText>Ancestor Version is used to specify an existing promoted (published) package version. It is typically specified in the format, e.g., 4.6.0 or using a keyword like HIGHEST. In Copado, this field reflects the value in your project configuration (sfdx-project.json) and cannot be edited from the UI. Be mindful of what version is used as ancestor as package ancestry impacts which package version upgrades are allowed.</inlineHelpText>
        <label>Ancestor Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcSf__Api_Version__c</fullName>
        <inlineHelpText>The api version to be used for the packaging CLI commands. If this is not specified, the Api Version value from the parent Package will be used. If neither has been specified, the default value, i.e. the api version of the Dev Hub, will be used. Specify in the format, e.g. 54.0.</inlineHelpText>
        <label>Api Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcSf__Code_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Calculate and store the code coverage percentage by running the Apex tests included in this package version.</inlineHelpText>
        <label>Code Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmcSf__Has_Installation_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if this is a password protected package version</inlineHelpText>
        <label>Has Installation Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmcSf__Post_Install_Script__c</fullName>
        <inlineHelpText>The name of the Apex class implementing InstallHandler which will be executed in the subscriber org after the managed package is installed or upgraded.</inlineHelpText>
        <label>Post Install Script</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcSf__Post_Install_URL__c</fullName>
        <label>Post Install URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcSf__Release_Notes_URL__c</fullName>
        <label>Release Notes URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmcSf__Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if validation was skipped during package version generation.</inlineHelpText>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cmcSf__Uninstall_Script__c</fullName>
        <inlineHelpText>The name of the Apex class implementing UninstallHandler which will be executed in the subscriber org before the managed package is uninstalled.</inlineHelpText>
        <label>Uninstall Script</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Artifact__c</fullName>
        <label>Package</label>
        <referenceTo>copado__Artifact__c</referenceTo>
        <relationshipLabel>Package Versions</relationshipLabel>
        <relationshipName>Artifact_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Branch__c</fullName>
        <inlineHelpText>The package version’s branch. Package version content is stored in this branch in the given repository. You may reach your repository information from the parent artifact record.</inlineHelpText>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Data_JSON__c</fullName>
        <label>Data JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__DefinitionFile__c</fullName>
        <label>Definition File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Is_released__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Package versions are being created as beta and you can promote them to be released. When a version is released this checkbox will be checked.</inlineHelpText>
        <label>Is released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__LastJobExecutionId__c</fullName>
        <label>Last Job Execution Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Package_Version_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Package version id is in use in order to specify ancestry among package versions and for promoting a package version.</inlineHelpText>
        <label>Package Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Production_Installation_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://login.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;https://login.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this URL in order to install this package in a production environment.</inlineHelpText>
        <label>Production Installation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release_Status__c</fullName>
        <formula>TEXT(copado__Release__r.copado__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipName>Artifact_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sandbox_Installation_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://test.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;https://test.salesforce.com/packaging/installPackage.apexp?p0=&apos;+copado__Subscriber_Version_Id__c, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this URL in order to install this package in a sandbox environment.</inlineHelpText>
        <label>Sandbox Installation URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pre-Release</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Subscriber_Version_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>In order to install a package to a Salesforce environment, installation URL requires a subscriber Id. Please refer to installation URLs.</inlineHelpText>
        <label>Subscriber Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Tag__c</fullName>
        <inlineHelpText>The package version’s tag. Package version content is stored in this tag in the given repository. Tags are created for each version number. Version with the same version number may overwrite each other. Try to keep your version numbers unique.</inlineHelpText>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Bundle Package</relationshipLabel>
        <relationshipName>Bundle_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Version_Description__c</fullName>
        <inlineHelpText>The description of the package version</inlineHelpText>
        <label>Version Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Version_Name__c</fullName>
        <inlineHelpText>the name of the package version which entered by user while version creation.</inlineHelpText>
        <label>Version Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Version__c</fullName>
        <formula>copado__Release__r.copado__Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Version_number__c</fullName>
        <inlineHelpText>The version number of the package version. Must be in major.minor.patch.build format.</inlineHelpText>
        <label>Version number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__View_In_Git__c</fullName>
        <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c )), copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c != &apos;&apos;),
		IF(
			AND(NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c +  copado__Version__c,
			IF(
				CONTAINS(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c,&apos;[TAG_NAME]&apos;),
				SUBSTITUTE(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c,&apos;[TAG_NAME]&apos;,copado__Version__c),
				copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c + copado__Version__c
			)
		),
	&apos;&apos;), 
	copado__Version__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View In Git</label>
        <type>Text</type>
    </fields>
    <label>Package Version</label>
    <nameField>
        <label>Artifact Versions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>cmcSf__Api_Version_Format</fullName>
        <active>true</active>
        <errorConditionFormula>copado__Artifact__r.RecordType.DeveloperName = &apos;Package_Artifact&apos;  &amp;&amp; ISPICKVAL(copado__Artifact__r.copado__Pipeline__r.copado__Platform__c, &apos;SFDX&apos;) &amp;&amp; NOT(ISBLANK(cmcSf__Api_Version__c)) &amp;&amp; NOT(REGEX(cmcSf__Api_Version__c, &quot;^\\d*.0&quot;))</errorConditionFormula>
        <errorDisplayField>cmcSf__Api_Version__c</errorDisplayField>
        <errorMessage>The API version specified is not valid. It must be in the format, Number.0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cmcSf__Package_Version_Number_Format</fullName>
        <active>true</active>
        <description>Version Number should be in the format Major. Minor. Patch. Build.</description>
        <errorConditionFormula>copado__Artifact__r.RecordType.DeveloperName = &apos;Package_Artifact&apos;  &amp;&amp;  ISPICKVAL( copado__Artifact__r.copado__Pipeline__r.copado__Platform__c , &quot;SFDX&quot;)  &amp;&amp; NOT(ISBLANK(copado__Version_number__c)) &amp;&amp; NOT(REGEX(copado__Version_number__c, &quot;^\\d+\\.\\d+\\.\\d+\\.(\\d+|NEXT)$&quot;))</errorConditionFormula>
        <errorDisplayField>copado__Version_number__c</errorDisplayField>
        <errorMessage>The Package version number specified is not valid. It must be in the format,  {whole number}.{whole number}.{whole number}.{whole number} or {whole number}.{whole number}.{whole number}.NEXT</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cmcSf__Tag_Restriction</fullName>
        <active>true</active>
        <description>Tag should be in valid format as per Git documentation</description>
        <errorConditionFormula>AND( copado__Artifact__r.RecordType.DeveloperName = &apos;Package_Artifact&apos;,
ISPICKVAL(copado__Artifact__r.copado__Pipeline__r.copado__Platform__c, &apos;SFDX&apos;) , OR(REGEX( copado__Tag__c ,&quot;(.*[\\?\\*\\~\\^\\:\\[\\s\\\\].*)&quot;), 
REGEX(copado__Tag__c, &quot;^(/).*&quot;),
REGEX(copado__Tag__c, &quot;.*[/.]$&quot;), 
REGEX(copado__Tag__c, &quot;.*(.lock)$&quot;), 
REGEX(copado__Tag__c, &quot;.*(\\@\\{).*&quot;),
REGEX(copado__Tag__c, &quot;.*(\\/\\/).*&quot;),
REGEX(copado__Tag__c, &quot;.*(\\/\\.).*&quot;),
REGEX(copado__Tag__c, &quot;.*(\\.\\.).*&quot;)
))</errorConditionFormula>
        <errorDisplayField>copado__Tag__c</errorDisplayField>
        <errorMessage>The Tag field is used to create a Git tag during package version creation. Ensure there are no spaces or character sequences that are not allowed for the Git tag. For more details, review the Git documentation https://git-scm.com/docs/git-check-ref-format</errorMessage>
    </validationRules>
</CustomObject>